@@ -15,6 +15,8 @@ Creation and Implementation
 
 * Rob Gietema - Bootstrap integration for Obviel Forms
 
+* Daniel Havlik - bugfixes to Obviel Template
+
 Useful conversations
 --------------------
 
